# mit_dmfm_course

./: .gitignore  README.md  main.py  pyproject.toml
2025/: lab_three.ipynb
